syntax = "proto3";

package Ping;

service Ping {
  rpc SayPing (PingRequest) returns (PingReply);
}

message PingRequest {
  string message = 1;
}

message PingReply {
  string message = 1;
}